Fix Quarkus Dev mode with errorprone